hphp/test/slow/like_types/like_casts_wrong.php.expectf

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected int, got string' in %s/hphp/test/slow/like_types/like_casts_wrong.php:6
Stack trace:
#0 {main}
